examples/c/error-codes/violates-constraint/fatal/CV-TSE1-bad-static.output
CV-TSE1-bad-static.c:9:11: error: initializing 'struct s' with an expression of incompatible type 'int'
 struct s s0 = 1;
          ^    ~
1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-tdOds/pp-ONyob.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
